Minor fixes to join banner and footer image. FP text now fits in div on mobile.

--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -20,5 +20,7 @@
 @media (max-width: 760px) {
   .footer-img {
     max-height: auto;
+    max-width: 90%;
+    padding-top: 25px;
   }
 }
